--- a/solution/Dimas/Dimas/Views/Wedding/Index.cshtml
+++ b/solution/Dimas/Dimas/Views/Wedding/Index.cshtml
@@ -5,7 +5,7 @@
 
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>Thais e Edmar Jr</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -30,7 +30,7 @@
     }
 
     .bgimg {
-        background-image: url("/images/wedding_couple.jpg")
+        background-image: url("/images/mesa2.jpg")
     }
 
     .bgimg2 {
@@ -41,7 +41,7 @@
 
     <!-- Header / Home-->
     <header class="w3-display-container w3-wide bgimg w3-grayscale-min" id="home">
-        <div class="w3-display-middle w3-text-white w3-center">
+        <div class="w3-display-middle w3-text-white w3-center" style="top:42%">
             <h1 class="w3-jumbo">Thaís e Edmar Jr</h1>
             <h2>Estão se casando</h2>
             <h2><b>17.07.2018</b></h2>
@@ -62,7 +62,7 @@
     <div class="w3-container w3-padding-64 w3-pale-red w3-grayscale-min" id="us">
         <div class="w3-content">
             <h1 class="w3-center w3-text-grey"><b>Thaís e Edmar Jr</b></h1>
-            <img class="w3-round w3-grayscale-min" src="/images/wedding_couple2.jpg" style="width:100%;margin:32px 0">
+            <img class="w3-round w3-grayscale-min" src="/images/wedding_couple_new.png" style="width:100%;margin:32px 0">
             <p>
                 <i>
                     Vamos nos casar. E o nosso convidado de honra é você. Nossa história não poderia ter acontecido de uma maneira melhor sem sua presença nela. 
